--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -4,10 +4,13 @@
 	<parent>
 		<groupId>com.xuxueli</groupId>
 		<artifactId>xxl-job</artifactId>
-		<version>2.2.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>xxl-job-admin</artifactId>
+	<!--
 	<packaging>jar</packaging>
+	-->
+	<packaging>war</packaging>
 
 	<dependencyManagement>
 		<dependencies>
@@ -76,7 +79,12 @@
 	</dependencies>
 
 	<build>
+		<finalName>glodon-job-admin</finalName>
 		<plugins>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.0.0</version>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
