--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -22,9 +22,9 @@ spring.freemarker.settings.number_format=0.##########
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?Unicode=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=root_pwd
+spring.datasource.url=jdbc:mysql://113.108.174.247:8083/xxl_job?Unicode=true&characterEncoding=UTF-8
+spring.datasource.username=gzzjz
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
