--- a/glodon-job-admin/src/main/resources/application.properties
+++ b/glodon-job-admin/src/main/resources/application.properties
@@ -22,9 +22,9 @@ spring.freemarker.settings.number_format=0.##########
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://113.108.174.247:8083/xxl_job?Unicode=true&characterEncoding=UTF-8
-spring.datasource.username=gzzjz
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:8083/xxl_job?Unicode=true&characterEncoding=UTF-8
+spring.datasource.username=admin
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
