--- a/glodon-job-executor-samples/glodon-job-executor-sample-jboot/src/main/resources/jboot.properties
+++ b/glodon-job-executor-samples/glodon-job-executor-sample-jboot/src/main/resources/jboot.properties
@@ -3,10 +3,10 @@ undertow.port=8082
 
 
 ### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+xxl.job.admin.addresses=http://localhost:8081/xxl-job-admin
 
 ### xxl-job executor address
-xxl.job.executor.appname=xxl-job-executor-sample
+xxl.job.executor.appname=glodon-job-executor-sample
 xxl.job.executor.ip=
 xxl.job.executor.port=9995
 
