--- a/glodon-job-executor-samples/glodon-springboot-executor/src/main/resources/application.properties
+++ b/glodon-job-executor-samples/glodon-springboot-executor/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.config=classpath:logback.xml
 
 
 ### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-xxl.job.admin.addresses=http://113.108.174.246:8081/
+xxl.job.admin.addresses=http://localhost:8081/
 
 ### xxl-job executor address
 xxl.job.executor.appname=springboot-executor
