--- a/glodon-job-executor-samples/glodon-springboot-executor/src/main/resources/application.properties
+++ b/glodon-job-executor-samples/glodon-springboot-executor/src/main/resources/application.properties
@@ -5,18 +5,18 @@ server.port=9998
 logging.config=classpath:logback.xml
 
 
-### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
-xxl.job.admin.addresses=http://localhost:8081/
+### glodon-job admin address list, such as "http://address" or "http://address01,http://address02"
+glodon.job.admin.addresses=http://localhost:8081/
 
-### xxl-job executor address
-xxl.job.executor.appname=springboot-executor
-xxl.job.executor.ip=
-xxl.job.executor.port=9999
+### glodon-job executor address
+glodon.job.executor.appname=springboot-executor
+glodon.job.executor.ip=
+glodon.job.executor.port=9999
 
-### xxl-job, access token
-xxl.job.accessToken=
+### glodon-job, access token
+glodon.job.accessToken=
 
-### xxl-job log path
-xxl.job.executor.logpath=
-### xxl-job log retention days
-xxl.job.executor.logretentiondays=30
+### glodon-job log path
+glodon.job.executor.logpath=
+### glodon-job log retention days
+glodon.job.executor.logretentiondays=30
