--- a/glodon-job-admin/src/main/resources/application.properties
+++ b/glodon-job-admin/src/main/resources/application.properties
@@ -22,7 +22,7 @@ spring.freemarker.settings.number_format=0.##########
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://localhost:8083/xxl_job?Unicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/glodon_job?Unicode=true&characterEncoding=UTF-8
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
