--- a/glodon-job-admin/src/main/resources/application.properties
+++ b/glodon-job-admin/src/main/resources/application.properties
@@ -21,9 +21,9 @@ spring.freemarker.settings.number_format=0.##########
 ### mybatis
 mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 
-### xxl-job, datasource
+### glodon-job, datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/glodon_job?Unicode=true&characterEncoding=UTF-8
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
@@ -34,7 +34,7 @@ spring.datasource.tomcat.test-on-borrow=true
 spring.datasource.tomcat.validation-query=SELECT 1
 spring.datasource.tomcat.validation-interval=30000
 
-### xxl-job email
+### glodon-job email
 spring.mail.host=smtp.qq.com
 spring.mail.port=25
 spring.mail.username=xxx@qq.com
@@ -44,15 +44,19 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 
-### xxl-job, access token
-xxl.job.accessToken=
+### glodon-job, access token
+glodon.job.accessToken=
 
-### xxl-job, i18n (default empty as chinese, "en" as english)
-xxl.job.i18n=
+### glodon-job, i18n (default empty as chinese, "en" as english)
+glodon.job.i18n=
 
-## xxl-job, triggerpool max size
-xxl.job.triggerpool.fast.max=200
-xxl.job.triggerpool.slow.max=100
+## glodon-job, triggerpool max size
+glodon.job.triggerpool.fast.max=200
+glodon.job.triggerpool.slow.max=100
 
-### xxl-job, log retention days
-xxl.job.logretentiondays=30
+### glodon-job, log retention days
+glodon.job.logretentiondays=30
+
+###glodon-job singleton {singleton or cluster}
+glodon.job.cluster.mode=singleton
+glodon.job.admin.addresses=http://localhost:8081/glodon-job-admin
