--- a/glodon-job-executor-samples/glodon-springboot-executor/src/main/resources/application.properties
+++ b/glodon-job-executor-samples/glodon-springboot-executor/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.config=classpath:logback.xml
 
 
 ### glodon-job admin address list, such as "http://address" or "http://address01,http://address02"
-glodon.job.admin.addresses=http://localhost:8081/
+glodon.job.admin.addresses=http://localhost:8081/glodon-job-admin
 
 ### glodon-job executor address
 glodon.job.executor.appname=springboot-executor
